--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "full-deploy": "npm run pre-deploy-check && npm run deploy"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
